--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -7,11 +7,11 @@
 }
 
 :root {
-  --primary-text-color: #393e46;
-  --primary-color: #fff;
-  --secondary-color: #6d9886;
-  --tertiary-color: #f2e7d5;
-  --newsletter-color: #d3e0db;
+  --light-color: #fff;
+  --dark-color: #393e46;
+  --primary-color: #6d9886;
+  --secondary-color: #f2e7d5;
+  --tertiary-color: #d3e0db;
 }
 
 /* Basic Styling */
@@ -19,18 +19,18 @@ html,
 body {
   font-family: "Lato", sans-serif;
   line-height: 1.6;
-  background-color: var(--primary-color);
-  color: var(--primary-text-color);
+  background-color: var(--light-color);
+  color: var(--dark-color);
   scroll-behavior: smooth;
 }
 
 a {
   text-decoration: none;
-  color: var(---primary-text-color);
+  color: var(--dark-color);
 }
 
 a:hover {
-  color: var(--secondary-color);
+  color: var(--primary-color);
   cursor: pointer;
 }
 
@@ -50,7 +50,22 @@ img {
 }
 
 .container-sm {
-  max-width: 1100px;
+  max-width: 1040px;
+  margin-bottom: 2.5rem;
+}
+
+.btn {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  padding: 0.5rem 1.5rem;
+  margin-top: 20px;
+  border: 2px solid var(--primary-color);
+  border-radius: 4px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.btn:hover {
+  background-color: transparent;
 }
 
 /* Navbar */
@@ -111,6 +126,32 @@ img {
   flex-direction: column;
   gap: 2rem;
   font-size: 1.2rem;
+}
+
+/* Hero */
+.hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)),
+    url(../images/background-hero.jpg) top center/cover;
+  height: 585px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero .hero-content {
+  text-align: center;
+  padding: 2rem 2rem;
+}
+
+.hero .hero-content h1 {
+  margin-bottom: 0.2rem;
+  font-size: 3rem;
+}
+
+.hero .hero-content p {
+  margin-bottom: 1.3rem;
+  font-size: 1.4rem;
 }
 
 /* Media Queries */
