--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -379,6 +379,49 @@ i.fa-heart {
   margin-right: 0.3rem;
 }
 
+/* -------------- */
+/* Recipe Pages*/
+.hero-recipe {
+  height: 440px;
+  margin-bottom: 2.5rem;
+}
+
+.horizontal-line {
+  height: 3px;
+  background-color: var(--secondary-color);
+}
+
+.hero-recipe .hero-header {
+  margin: 1rem 0;
+  border-bottom: 2px solid var(--secondary-color);
+  text-transform: uppercase;
+}
+
+.hero-recipe .hero-image {
+  height: 300px;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.hero-recipe .hero-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.hero-recipe .preview {
+  border-bottom: 2px solid var(--secondary-color);
+}
+
+.hero-recipe .preview i:nth-of-type(2) {
+  margin-left: 1rem;
+}
+
+.hero-recipe .preview i {
+  margin-right: 0.2rem;
+  margin-bottom: 1rem;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   .navbar .main-menu {
