--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -44,7 +44,7 @@ img {
 
 /* Utility Classes */
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0.5rem 2rem;
 }
@@ -458,6 +458,34 @@ i.fa-heart {
 
 .recipe-details ol li {
   padding-left: 1.5rem;
+}
+
+/* Tag Recipe */
+.tag-recipe {
+  background-color: var(--dark-color);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  border-radius: 3px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.tag-recipe i {
+  font-size: 6rem;
+  color: var(--secondary-color);
+}
+
+.tag-content {
+  width: 40%;
+  color: var(--secondary-color);
+}
+
+.tag-content h2 {
+  text-transform: uppercase;
+  margin: 0.2rem auto 0.5rem;
 }
 
 /* Media Queries */
