--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -488,6 +488,58 @@ i.fa-heart {
   margin: 0.2rem auto 0.5rem;
 }
 
+/* Comment */
+.comment {
+  border: 2px solid var(--secondary-color);
+}
+
+.comment-body {
+  width: 70%;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.comment h2 {
+  margin-bottom: 0.7rem;
+}
+
+.comment p {
+  margin-bottom: 1rem;
+  font-size: small;
+}
+
+.comment textarea,
+.comment input {
+  width: 100%;
+  outline: none;
+  font-family: inherit;
+  font-size: 0.8;
+  border: none;
+  border-radius: 3px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: var(--secondary-color);
+  opacity: 0.7;
+}
+
+.comment textarea::placeholder,
+.comment input::placeholder {
+  color: var(--dark-color);
+}
+
+.comment button {
+  border: 2px solid var(--dark-color);
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  cursor: pointer;
+}
+
+.comment button:hover {
+  border: 2px solid var(--dark-color);
+  background-color: transparent;
+  color: var(--dark-color);
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   .navbar .main-menu {
