--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -122,7 +122,7 @@ img {
   gap: 1rem;
   justify-content: center;
   align-items: center;
-  color: var(--primary-text-color);
+  color: var(--dark-color);
 }
 
 /* Mobile */
@@ -131,7 +131,7 @@ img {
 }
 
 .navbar .mobile-menu-toggle {
-  color: var(--primary-text-color);
+  color: var(--dark-color);
   cursor: pointer;
 }
 
@@ -140,7 +140,8 @@ img {
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: var(--newsletter-color);
+  background-color: var(--light-color);
+  opacity: 0.95;
   padding: 3rem 2rem;
   text-align: center;
   transition: transform 0.3s ease-in-out;
