--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -161,7 +161,7 @@ img {
 
 /* Hero */
 .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)),
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
     url(../images/background-hero.jpg) top center/cover;
   height: 585px;
   display: flex;
@@ -560,13 +560,190 @@ i.fa-heart {
   text-align: right;
 }
 
+/* -------------- */
 /* Media Queries */
 @media (max-width: 768px) {
+  /* Navbar */
   .navbar .main-menu {
     display: none;
   }
 
   .navbar .mobile-menu {
     display: block;
+  }
+
+  /* Hero */
+  .hero .hero-content h3 {
+    font-size: 2rem;
+  }
+
+  /* About */
+  .about {
+    height: 400px;
+    padding: 1rem 1.8rem;
+  }
+
+  .about-content h3 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
+
+  /* Recipe Grid */
+  .recipes-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 200px);
+    gap: 1rem;
+  }
+
+  .recipe-card-item .image-wrapper {
+    height: 140px;
+  }
+
+  .recipe-card-item .recipe-card-description h4 {
+    font-size: 1rem;
+  }
+
+  .recipe-card-item .recipe-card-preview {
+    display: none;
+  }
+
+  /* Footer */
+  footer {
+    height: 530px;
+  }
+
+  .footer-grid {
+    grid-template-areas:
+      "logo quick-links"
+      "newsletter newsletter"
+      "copyright copyright";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto-fit);
+    column-gap: 4rem;
+    row-gap: 2rem;
+    text-align: left;
+  }
+
+  .footer-grid .copyright {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .footer-grid .newsletter {
+    padding-top: 1rem;
+    border-top: 1px solid var(--light-color);
+  }
+
+  .footer-grid .newsletter input {
+    width: 80%;
+  }
+
+  /* Recipe Page */
+  .hero-recipe {
+    height: 380px;
+    margin-bottom: 1.4rem;
+  }
+
+  .hero-recipe .hero-image {
+    height: 230px;
+  }
+
+  .hero-recipe .preview p {
+    font-size: 0.9rem;
+  }
+
+  .recipe-details {
+    flex-direction: column;
+  }
+
+  .container-sm {
+    margin-bottom: 1.5rem;
+  }
+
+  /* Tag Recipe */
+  .tag-recipe {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    flex-direction: column;
+    gap: 0.9rem;
+    margin-bottom: 0;
+  }
+
+  .tag-recipe i {
+    font-size: 3rem;
+  }
+
+  .tag-content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .tag-content h2 {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-top: 0rem;
+  }
+
+  /* Comment */
+  .comment {
+    border: none;
+  }
+
+  .comment .comment-body {
+    width: 100%;
+  }
+
+  .pages-nav {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero {
+    height: 370px;
+  }
+
+  .hero .hero-content h3 {
+    font-size: 1.4rem;
+  }
+
+  #recipes {
+    margin: 0;
+  }
+
+  .recipes-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 180px);
+  }
+
+  .recipe-car-item .image-wrapper {
+    height: 126px;
+  }
+}
+
+@media (max-width: 430px) {
+  .hero .hero-content h1 {
+    font-weight: bold;
+    font-size: 1.7rem;
+  }
+
+  .hero .hero-content p {
+    font-size: 0.9rem;
+  }
+
+  .about-content h3 {
+    font-size: 1.4rem;
+  }
+
+  .recipes-grid {
+    grid-template-rows: repeat(2, 150px);
+  }
+
+  .recipe-card-item .image-wrapper {
+    height: 105px;
+  }
+
+  .hero-recipe .hero-header {
+    font-size: 10px;
   }
 }
