fix: Increase the height of row grid and image in the homepage recipe grid for mobile version

--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -693,7 +693,7 @@ i.fa-heart {
     width: 100%;
   }
 
-  .pages-nav {
+  .pages-nav p {
     font-size: 1.1rem;
   }
 }
@@ -713,11 +713,13 @@ i.fa-heart {
 
   .recipes-grid {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 180px);
+    /* grid-template-rows: repeat(2, 180px); */
+    grid-template-rows: repeat(2, 290px);
   }
 
-  .recipe-car-item .image-wrapper {
-    height: 126px;
+  .recipe-card-item .image-wrapper {
+    /* height: 126px; */
+    height: 230px;
   }
 }
 
@@ -735,13 +737,13 @@ i.fa-heart {
     font-size: 1.4rem;
   }
 
-  .recipes-grid {
+  /* .recipes-grid {
     grid-template-rows: repeat(2, 150px);
   }
 
   .recipe-card-item .image-wrapper {
     height: 105px;
-  }
+  } */
 
   .hero-recipe .hero-header {
     font-size: 10px;
