--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -144,12 +144,14 @@ img {
   opacity: 0.95;
   padding: 3rem 2rem;
   text-align: center;
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(100%);
+  transition: transform 0.3s ease, visibility 0.3s ease;
+  transform: translateX(-100%);
+  visibility: hidden;
 }
 
 .navbar .mobile-menu-items.active {
   transform: translateX(0);
+  visibility: visible;
 }
 
 .navbar .mobile-menu-list {
