feat: Add CSS style to the HTML file

--- a/the-odin-project-lectures/02-css-exercises/01-foundations/04-chaining-selectors/style.css
+++ b/the-odin-project-lectures/02-css-exercises/01-foundations/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
-/* Add CSS Styling */
+/* Add CSS Styling - Chaining Selectors */
+.avatar.proportioned {
+  height: auto;
+  width: 300px;
+}
+
+.avatar.distorted {
+  height: 400px;
+  width: 200px;
+}
