--- a/the-odin-project-lectures/02-css-exercises/01-foundations/06-cascade-fix/style.css
+++ b/the-odin-project-lectures/02-css-exercises/01-foundations/06-cascade-fix/style.css
@@ -2,14 +2,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ----------------------------- */
+/* First Paragraphs - p elements */
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
   font-weight: 800;
 }
 
@@ -17,26 +14,56 @@ body {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+/* Chaining Selector */
+.para.small-para {
+  font-size: 14px;
+}
 
+/* ----------------------------- */
+/* Buttons */
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+/* Chaining Selector */
+.button.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+}
+
+/* 
+Alternative Solution with ID selector
+
+#confirm-button {
+  background: green;
+  color: white;
+  font-weight: bold;
+} */
+
+/* ----------------------------- */
+/* Last Paragraphs - div element */
+.text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
+}
+
+/* Descendant Combinator */
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
+/* 
+Alternative Solution with a type selector - div
+
+div .child {
   color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+  font-weight: 800;
+  font-size: 14px;
 }
+*/
