--- a/odin-recipes/css/style.css
+++ b/odin-recipes/css/style.css
@@ -42,6 +42,14 @@ img {
   max-width: 100%;
 }
 
+figcaption {
+  font-size: 14px;
+}
+
+figcaption a {
+  font-weight: bold;
+}
+
 /* Utility Classes */
 .container {
   max-width: 1100px;
@@ -384,14 +392,14 @@ i.fa-heart {
 
 /* -------------- */
 /* Recipe Pages*/
-.hero-recipe {
-  height: 440px;
-  margin-bottom: 2.5rem;
-}
-
 .horizontal-line {
   height: 3px;
   background-color: var(--secondary-color);
+}
+
+.hero-recipe {
+  height: 440px;
+  margin-bottom: 2.5rem;
 }
 
 .hero-recipe .hero-header {
@@ -400,14 +408,14 @@ i.fa-heart {
   text-transform: uppercase;
 }
 
-.hero-recipe .hero-image {
+.hero-recipe .hero-figure {
   height: 300px;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 1.6rem;
 }
 
-.hero-recipe .hero-image img {
-  height: 100%;
+.hero-recipe .hero-figure img {
+  height: 90%;
   width: 100%;
   object-fit: cover;
 }
@@ -416,13 +424,13 @@ i.fa-heart {
   border-bottom: 2px solid var(--secondary-color);
 }
 
-.hero-recipe .preview i:nth-of-type(2) {
-  margin-left: 1rem;
-}
-
 .hero-recipe .preview i {
   margin-right: 0.2rem;
   margin-bottom: 1rem;
+}
+
+.hero-recipe .preview i:nth-of-type(2) {
+  margin-left: 1rem;
 }
 
 /* Recipe Details*/
@@ -451,16 +459,16 @@ i.fa-heart {
   padding-left: 0.6rem;
 }
 
+.recipe-details ol li {
+  padding-left: 1.5rem;
+}
+
 .recipe-details ol li::marker {
   color: var(--primary-color);
   font-size: 1.2rem;
   font-weight: bold;
   content: counter(list-item);
   margin-left: 2rem;
-}
-
-.recipe-details ol li {
-  padding-left: 1.5rem;
 }
 
 /* Tag Recipe */
@@ -642,7 +650,7 @@ i.fa-heart {
 
   /* Recipe Page */
   .hero-recipe {
-    height: 380px;
+    height: 460px;
     margin-bottom: 1.4rem;
   }
 
@@ -737,7 +745,11 @@ i.fa-heart {
     font-size: 1.4rem;
   }
 
+  .hero-recipe {
+    height: 430px;
+  }
+
   .hero-recipe .hero-header {
-    font-size: 10px;
+    font-size: 1.3rem;
   }
 }
