--- a/the-odin-project-lectures/02-css-exercises/03-flex/01-flex-center/style.css
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/01-flex-center/style.css
@@ -3,6 +3,11 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+
+  /* Solution */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
