--- a/the-odin-project-lectures/02-css-exercises/03-flex/05-flex-modal/style.css
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +20,7 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 .icon {
@@ -66,4 +67,32 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* Solution */
+.modal {
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.icon,
+.close-button {
+  flex-shrink: 0;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.header {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.text {
+  margin-bottom: 16px;
 }
