--- a/the-odin-project-lectures/02-css-exercises/03-flex/07-flex-layout-2/style.css
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/07-flex-layout-2/style.css
@@ -1,29 +1,83 @@
+/* Basis Styling */
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* Header */
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+/* Main */
+.content {
+  flex: 1;
+  display: flex;
 }
 
+/* Sidebar */
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.sidebar a {
+  font-size: 24px;
+  color: white;
+}
+
+/* Cards */
+.flex-cards {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+
+  padding: 16px;
+  flex: 25%;
+}
+
+/* Footer */
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
