--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -63,6 +63,10 @@ img {
   transition: all 0.3s ease;
 }
 
+.btn i {
+  margin-right: 0.4rem;
+}
+
 .btn:hover {
   background-color: var(--dark-color);
   border: 2px solid var(--tertiary-color);
@@ -77,6 +81,17 @@ img {
   background-color: transparent;
   color: var(--tertiary-color);
   border: 2px solid var(--tertiary-color);
+}
+
+.btn-light {
+  border: 2px solid transparent;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: var(--primary-color);
+}
+
+.logo {
+  font-size: 1.4rem;
+  color: var(--tertiary-color);
 }
 
 /* Navbar */
@@ -135,6 +150,40 @@ img {
   flex-direction: column;
   gap: 2rem;
   font-size: 1.2rem;
+}
+
+/* Hero */
+.hero {
+  height: 90.5vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
+    url("../images/hero-background.jpg") center center/cover no-repeat;
+  margin-bottom: 3rem;
+}
+
+.hero-text {
+  height: 100%;
+  width: 60%;
+  color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding-bottom: 6rem;
+  margin-left: 5.5rem;
+}
+
+.hero-text h1 {
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+}
+
+.hero-text p {
+  font-size: 0.9rem;
+  margin-bottom: 2rem;
+}
+
+.hero-text .btn {
+  margin-right: 1rem;
 }
 
 /* Media Queries */
