--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -94,6 +94,10 @@ img {
   color: var(--tertiary-color);
 }
 
+.section-title {
+  margin-bottom: 1rem;
+}
+
 /* Navbar */
 .navbar {
   padding: 0.8rem;
@@ -184,6 +188,76 @@ img {
 
 .hero-text .btn {
   margin-right: 1rem;
+}
+
+/* Episodes */
+.episodes {
+  height: 550px;
+  margin-bottom: 0rem;
+}
+
+.episodes .cards-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-items: flex-start;
+  column-gap: 1.4rem;
+  height: 390px;
+}
+
+.episodes .card-figure {
+  height: 360px;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.episodes .card-figure img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.episodes .card-figure figcaption {
+  width: 100%;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  border-radius: 0 0 10px 10px;
+  background: rgba(0, 0, 0, 0.6);
+  color: var(--primary-color);
+  font-size: 14px;
+}
+
+.card-figure figcaption p:nth-child(1) {
+  font-weight: bold;
+}
+
+.card-figure figcaption p:nth-child(2) {
+  font-size: 10px;
+  margin-bottom: 5px;
+}
+
+.card-figure .play-button i {
+  font-size: 1rem;
+  margin-right: 0.3rem;
+  color: var(--tertiary-color);
+}
+
+.card-item a:hover {
+  opacity: 0.95;
+
+  i {
+    transition: transform 0.3s ease;
+    transform: scale(1.2);
+  }
+}
+
+.episodes .btn:hover {
+  border: 2px solid var(--dark-color);
 }
 
 /* Media Queries */
