--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -260,6 +260,45 @@ img {
   border: 2px solid var(--dark-color);
 }
 
+/* Testimonials */
+.testimonials {
+  margin-bottom: 3rem;
+  height: 300px;
+}
+
+.testimonials .section-title {
+  margin-bottom: 1rem;
+}
+
+.testimonials-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 3rem;
+  height: 180px;
+}
+
+.testimonials .grid-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+
+  padding: 1.4rem;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.grid-item .review p {
+  font-size: 0.8rem;
+}
+
+.grid-item .review .quotation {
+  color: var(--tertiary-color);
+  font-size: 1.2rem;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   /* Navbar */
