--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -447,4 +447,130 @@ img {
   .navbar .mobile-menu {
     display: block;
   }
+
+  .section-title {
+    text-align: center;
+    font-size: 1.2rem;
+  }
+
+  /* Hero */
+  .hero {
+    margin-bottom: 1rem;
+  }
+  .hero-text {
+    width: 70%;
+    margin-left: 2rem;
+  }
+
+  .hero-text h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .hero-text p {
+    margin-bottom: 1rem;
+  }
+
+  /* Episodes */
+  .episodes {
+    height: 730px;
+    margin-bottom: 1.4rem;
+  }
+
+  .episodes .cards-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+    height: 310px;
+  }
+
+  .episodes .card-figure {
+    height: 280px;
+  }
+
+  .episodes .btn {
+    display: block;
+    margin: 300px auto;
+    width: 50%;
+    text-align: center;
+  }
+
+  /* Testimoniasl */
+  .testimonials {
+    height: 560px;
+    margin-bottom: 1rem;
+  }
+
+  .testimonials-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  /* Newsletter */
+  .newsletter {
+    max-width: 90%;
+  }
+
+  .newsletter .section-title {
+    font-size: 1rem;
+  }
+
+  .newsletter p:nth-of-type(1) {
+    margin-bottom: 0.5rem;
+  }
+
+  .newsletter p:nth-of-type(2) {
+    display: none;
+  }
+
+  .newsletter input {
+    width: 50%;
+  }
+
+  /* Footer */
+  .footer-grid {
+    grid-template-areas:
+      "logo logo"
+      "quick-links contact"
+      "copyright copyright";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    row-gap: 2rem;
+  }
+
+  .footer-grid .footer-logo {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--footer-color);
+  }
+}
+
+@media (max-width: 460px) {
+  /* Hero */
+  .hero-text {
+    width: 90%;
+    margin-left: 1.5rem;
+    padding: 0.5rem;
+  }
+
+  .hero-text .btn {
+    display: block;
+    margin-bottom: 1rem;
+  }
+
+  .testimonials {
+    height: 600px;
+  }
+
+  .newsletter input {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .testimonials {
+    height: 700px;
+  }
 }
