--- a/rock-paper-scissors/css/style.css
+++ b/rock-paper-scissors/css/style.css
@@ -72,3 +72,78 @@ a:hover {
   transform: translateY(5px);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
+
+/* PLAYERS LAYOUT*/
+.players {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 5;
+}
+
+.card {
+  height: 100%;
+  flex: 1;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 2rem;
+  border: 3px solid var(--dark-color);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+/* PLAYERS ELEMENTS */
+.game-phase {
+  margin-top: 2rem;
+  padding: 0.6rem;
+  border: 3px solid var(--dark-color);
+  box-shadow: 5px 5px 1px var(--btn-color);
+  border-radius: 5px;
+  background-color: var(--dark-color);
+  color: #fff;
+  text-transform: uppercase;
+
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  z-index: 10;
+}
+
+.player-human {
+  background-color: var(--human-card-color);
+}
+
+.player-computer {
+  background-color: var(--computer-card-color);
+  border-left: none;
+}
+
+.score-human,
+.score-computer {
+  font-size: 3rem;
+  font-size: bold;
+}
+
+.choice-human,
+.choice-computer {
+  height: 100px;
+  margin-top: 1.4rem;
+  width: 100px;
+}
+
+.win-marker {
+  margin-right: 0.5rem;
+  padding: 0.1rem 0.2rem;
+  border-radius: 50%;
+  border: 2px solid var(--dark-color);
+  box-shadow: 3px 3px 1px var(--dark-color);
+  background-color: var(--btn-color);
+}
