--- a/calculator/css/style.css
+++ b/calculator/css/style.css
@@ -84,11 +84,10 @@ a:hover {
   background-color: var(--primary-color);
   box-shadow: 2rem 2rem 1.5rem rgba(0, 0, 0, 0.3);
 
-  text-align: center;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between; */
+  justify-content: space-between;
 }
 
 /* -------------------------- */
@@ -189,21 +188,25 @@ by displaying the number buttons in descending order.
 /* MEDIA QUERIES */
 @media (max-width: 468px) {
   body {
-    margin: 0;
-    padding: 0;
     overflow: hidden;
-    position: relative;
   }
 
   .calculator {
-    position: absolute;
-    top: 0;
-    left: 0;
     height: 100vh;
     width: 100vw;
     border-radius: 0;
     overflow: hidden;
+  }
+  .display {
+    justify-content: flex-end;
+  }
 
-    justify-content: flex-start;
+  .display .display-result {
+    font-size: 3rem;
+  }
+
+  .btn {
+    height: 5rem;
+    font-size: 1.5rem;
   }
 }
