--- a/calculator/css/style.css
+++ b/calculator/css/style.css
@@ -186,7 +186,7 @@ by displaying the number buttons in descending order.
 
 /* -------------------------- */
 /* MEDIA QUERIES */
-@media (max-width: 468px) {
+@media (min-width: 300px) and (max-width: 468px) {
   body {
     overflow: hidden;
   }
@@ -197,16 +197,13 @@ by displaying the number buttons in descending order.
     border-radius: 0;
     overflow: hidden;
   }
-  .display {
-    justify-content: flex-end;
-  }
 
   .display .display-result {
     font-size: 3rem;
   }
 
   .btn {
-    height: 5rem;
+    height: 4.5rem;
     font-size: 1.5rem;
   }
 }
