--- a/calculator/css/style.css
+++ b/calculator/css/style.css
@@ -122,6 +122,10 @@ a:hover {
   font-size: 2.5rem;
 }
 
+.display .error-msg {
+  font-size: 1.5rem;
+}
+
 /* -------------------------- */
 /* INPUT KEYS LAYOUT */
 .keys {
@@ -232,6 +236,11 @@ by displaying the number buttons in descending order.
   .display .display-result {
     font-size: 4rem;
     margin-bottom: 2rem;
+  }
+
+  .display .error-msg {
+    font-size: 2rem;
+    margin-bottom: 3rem;
   }
 
   .btn {
